--- a/config
+++ b/config
@@ -210,21 +210,24 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 # Brightness control
-bindsym  mod+Shift+u exec sudo /usr/local/sbin/lcd_bright.sh u 10
-bindsym mod+Shift+d  exec sudo /usr/local/sbin/lcd_bright.sh d 10
-
+bindsym $mod+Shift+u exec sudo /usr/local/sbin/lcd_bright.sh u 10
+bindsym $mod+Shift+d exec sudo /usr/local/sbin/lcd_bright.sh d 10
+ 
 # i3lock
 bindsym $mod+shift+x exec i3lock -i /home/sourav/Pictures/Wallpapers/2.png
 
+#Lock Touchpad
+bindsym $mod+p exec ~/bin/touch_toggle.sh 
+
 #run on startup
 exec_always --no-startup-id compton
-exec_always --no-startup-id feh --bg-scale /home/sourav/Pictures/Wallpapers/cs.jpg
+exec_always --no-startup-id feh --bg-scale /home/sourav/Pictures/Wallpapers/4.png
 exec --no-startup-id google-chrome
 exec /opt/google/chrome/google-chrome --profile-directory=Default --app-id=hmjkmjkepdijhoojdojkdfohbdgmmhki
 exec --no-startup-id spotify
-exec --no-startup-id thunar
+#exec --no-startup-id thunar
 exec --no-startup-id atom
 exec --no-startup-id nm-applet
-exec --no-startup-id i3-msg 'workspace $workspace2'; exec gnome-terminal -e ranger; bash
+exec --no-startup-id i3-msg 'workspace $workspace3'; exec gnome-terminal -e ranger; bash
 #exec --no-startup-id oneko
-#exec --no-startup-id espeak "Hello Mr Sharan"
+#exec --no-startup-id espeak "Hello Mr Sharan" 
